All nlbh custom changes brought in including new encounter form, removing default taxonomy codes, intake report, form helper classes, portal changes
composer file with mi2 stuff

updated intake form to use php8 appropiate date function

fixed dispatch and use statements

report fixes

bug fix in the diag picker

fixed billing bug

--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,11 @@
         "vlucas/phpdotenv": "5.5.0",
         "waryway/php-traits-library": "1.0.4",
         "yubico/u2flib-server": "1.0.2",
-        "twilio/sdk": "6.44.3"
+        "twilio/sdk": "6.44.3",
+
+        "mi-squared/oe-patient-privacy": "dev-master",
+        "mi-squared/oe-import": "dev-master",
+        "mi-squared/new-leaf-importer": "dev-master"
     },
     "config": {
         "platform": {
@@ -99,6 +103,22 @@
         {
             "type": "git",
             "url": "https://github.com/openemr/oe-module-cqm"
+        },
+        {
+            "type" : "git",
+            "url" : "https://github.com/mi-squared/oe-patient-privacy.git"
+        },
+        {
+            "type" : "git",
+            "url" : "https://github.com/mi-squared/new-leaf-importer.git"
+        },
+        {
+            "type" : "git",
+            "url" : "https://github.com/mi-squared/oe-import.git"
+        },
+        {
+            "type" : "git",
+            "url" : "https://github.com/mi-squared/oe-module-installer-plugin.git"
         }
     ],
     "autoload": {
